--- a/app/assets/stylesheets/invoice.css.scss.erb
+++ b/app/assets/stylesheets/invoice.css.scss.erb
@@ -137,3 +137,68 @@
 #map-on-invoice {
   height: 400px;
 }
+
+.featured-info{
+  background-image: linear-gradient(to left,rgba(238, 238, 238, 0)  0%,rgba(48, 165, 255, 0.19) 100%);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0px;
+  right: 0px;
+  width: 50px;
+  height: 450px;
+  z-index: 666;
+}
+
+#map{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: -15px;
+  right: 0px;
+  width: auto;
+}
+
+.map{
+  float: left;
+}
+
+.after_map{
+  clear: left;
+  margin-top: 459px;
+}
+
+.colorgraph{
+  margin-top: 450px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: -15px;
+  right: -2px;
+  width: auto;
+  background-image: linear-gradient(to right, #c4e17f, #c4e17f 12.5%,
+    #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%,
+    #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%,
+    #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
+  height: 5px;
+}
+
+.nht-fix-input{
+  -webkit-appearance: none;
+  background-color: #fff;
+  border: 1px solid #adadad;
+  border-radius: 1px;
+  box-shadow: none;
+  color: #303030;
+  font-size: 1.4rem;
+  font-weight: 400;
+  height: auto;
+  line-height: 1.36;
+  padding: .6rem 1rem .6rem;
+  transition: border-color .1s linear;
+  vertical-align: baseline;
+}
+
+#map{
+  background-image: ;
+}
