--- a/app/views/shop/shippers/_shipper_index.html.erb
+++ b/app/views/shop/shippers/_shipper_index.html.erb
@@ -11,8 +11,12 @@
             <i class="fa fa-search hatd-icon-search" aria-hidden="true"></i>
           </span>
           <%= form_tag shop_shippers_path, method: :get, remote: true do %>
-            <%= text_field_tag :name_shipper, "", class: "form-control",
+            <%= text_field_tag "search[query]", "", class: "form-control",
               placeholder: t("users.search") %>
+            <div class="nht-options-invoices-search">
+              <%= select_tag "search[type]", options_for_select(Settings.shipper.search_attributes.
+                map {|s| [s.humanize, s]}), class: "form-control" %>
+            </div>
           <% end %>
         </div>
       </div>
