--- a/app/views/shop/shippers/index.js.erb
+++ b/app/views/shop/shippers/index.js.erb
@@ -1,4 +1,4 @@
-<% if params[:type] %>
+<% if params[:search] %>
   $('#hatd-shipper-table-content').html('<%= j render "shipper_content" %>');
 <% else %>
   $('#id-hatd-shippers-index').html('<%= j render "shipper_index" %>');
