--- a/app/views/shop/invoices/_form_invoice.html.erb
+++ b/app/views/shop/invoices/_form_invoice.html.erb
@@ -17,7 +17,7 @@
     <div class="form">
       <%= form_for [:shop, @invoice], remote: true do |f| %>
         <div id="td-create-error"></div>
-
+fefefe
         <div>
           <p class="td-shop-title">
             <%= t "create_invoice.info_information" %>
